Another small syntax changes